--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="row align-items-center">
           <div class="col-lg-7 col-md-12 mb-lg-0 mb-5">
             <div class="card border-0">
-              <img src="./images/img/img-1.png" alt="" class="img-fluid" />
+              <img src="./images/img/img-1.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="col-lg-5 col-md-12 text-sec">
@@ -202,9 +202,9 @@
           </div>
         </div>
         <div class="row pt-5">
-          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5">
             <div class="card">
-              <img src="./images/img/img-3.jpg" alt="" class="img-fluid" />
+              <img src="./images/items/img-3.jpg" alt="" class="img-fluid" />
               <div class="pt-3">
                 <h4>Vegetable sandwich</h4>
                 <p>Time: 20-25 Min | Serve: 1</p>
@@ -213,9 +213,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5">
             <div class="card">
-              <img src="./images/img/img-4.jpg" alt="" class="img-fluid" />
+              <img src="./images/items/img-4.jpg" alt="" class="img-fluid" />
               <div class="pt-3">
                 <h4>Vegetable sandwich</h4>
                 <p>Time: 20-25 Min | Serve: 1</p>
@@ -224,9 +224,42 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5">
             <div class="card">
-              <img src="./images/img/img-5.jpg" alt="" class="img-fluid" />
+              <img src="./images//items/img-5.jpg" alt="" class="img-fluid " />
+              <div class="pt-3">
+                <h4>Vegetable sandwich</h4>
+                <p>Time: 20-25 Min | Serve: 1</p>
+                <span>₹ 150 <del>₹ 200</del></span>
+                <button class="main-btn mt-4">Order Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5">
+            <div class="card">
+              <img src="./images//items/img-6.jpg" alt="" class="img-fluid " />
+              <div class="pt-3">
+                <h4>Vegetable sandwich</h4>
+                <p>Time: 20-25 Min | Serve: 1</p>
+                <span>₹ 150 <del>₹ 200</del></span>
+                <button class="main-btn mt-4">Order Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5">
+            <div class="card">
+              <img src="./images//items/img-7.jpg" alt="" class="img-fluid " />
+              <div class="pt-3">
+                <h4>Vegetable sandwich</h4>
+                <p>Time: 20-25 Min | Serve: 1</p>
+                <span>₹ 150 <del>₹ 200</del></span>
+                <button class="main-btn mt-4">Order Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5">
+            <div class="card">
+              <img src="./images//items/img-6.jpg" alt="" class="img-fluid " />
               <div class="pt-3">
                 <h4>Vegetable sandwich</h4>
                 <p>Time: 20-25 Min | Serve: 1</p>
@@ -245,7 +278,7 @@
     <div class="wrapper testimonial-section">
       <div class="container text-center">
         <div class="text-center pb-4">
-          <h2>Testimonial</h2>
+          <h2>Coustomers Review</h2>
         </div>
         <div class="row">
           <div class="col-sm-12 col-lg-10 offset-lg-1">
@@ -261,32 +294,32 @@
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <div class="carousel-caption">
-                    <img src="./images/review/review-1.jpg" alt="" />
+                    <img src="./images/review/review-1.PNG" alt="" />
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Nemo reiciendis ducimus provident vel, doloremque
+                      This is a wonderful website where I have benefited a lot by visiting it. People visiting here can believe me by saying this.
                     </p>
-                    <h5>Mohan isudfjisddf johf</h5>
+                    <h5>Indresh Bharati</h5>
+                    <h4>Software Developer</h4>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <div class="carousel-caption">
                     <img src="./images/review/review-2.jpg" alt="" />
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Nemo reiciendis ducimus provident vel, doloremque
+                      I have used this website, it is very easy to access all the items and I want to say that more work should be done on it.
                     </p>
-                    <h5>Mohan isudfjisddf johf</h5>
+                    <h5>Nilesh Kumar</h5>
+                    <h4>Advisior</h4>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <div class="carousel-caption">
-                    <img src="./images/review/review-1.jpg" alt="" />
+                    <img src="./images/review/review-3.jpg" alt="" />
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Nemo reiciendis ducimus provident vel, doloremque
+                      There is a lot of smoothness here, it is very easy to use
                     </p>
-                    <h5>Mohan isudfjisddf johf</h5>
+                    <h5>Praveen Kumar</h5>
+                    <h4>Fronted Developer</h4>
                   </div>
                 </div>
               </div>
