--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                   <div class="carousel-caption">
                     <img src="./images/review/review-1.PNG" alt="" />
                     <p>
-                      This is a wonderful website where I have benefited a lot by visiting it. People visiting here can believe me by saying this.
+                      This is a wonderful website and I have benefited a lot by visiting it.
                     </p>
                     <h5>Indresh Bharati</h5>
                     <h4>Software Developer</h4>
@@ -306,7 +306,7 @@
                   <div class="carousel-caption">
                     <img src="./images/review/review-2.jpg" alt="" />
                     <p>
-                      I have used this website, it is very easy to access all the items and I want to say that more work should be done on it.
+                      I have used this website, it is very easy to access all the items.
                     </p>
                     <h5>Nilesh Kumar</h5>
                     <h4>Advisior</h4>
