--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#faq">FAQ</a>
             </li>
-            <li><button class="main-btn">+91-7054220354</button></li>
+            <li><button class="main-btn">+91-20354</button></li>
           </ul>
         </div>
       </div>
@@ -344,22 +344,26 @@
         <div class="row pt-5">
           <div class="col-sm-6 mb-4">
             <h4><span>~</span> Is Foodies day</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta? Repellat minima enim quisquam adipisci ducimus doloribus.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta?
+              Repellat minima enim quisquam adipisci ducimus doloribus.</p>
 
           </div>
           <div class="col-sm-6 mb-4">
             <h4><span>~</span> Is Foodies day</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta? Repellat minima enim quisquam adipisci ducimus doloribus.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta?
+              Repellat minima enim quisquam adipisci ducimus doloribus.</p>
 
           </div>
           <div class="col-sm-6 mb-4">
             <h4><span>~</span> Is Foodies day</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta? Repellat minima enim quisquam adipisci ducimus doloribus.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta?
+              Repellat minima enim quisquam adipisci ducimus doloribus.</p>
 
           </div>
           <div class="col-sm-6 mb-4">
             <h4><span>~</span> Is Foodies day</h4>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta? Repellat minima enim quisquam adipisci ducimus doloribus.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.is veniam, quam nobis perferendis animi soluta?
+              Repellat minima enim quisquam adipisci ducimus doloribus.</p>
 
           </div>
         </div>
